WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130651
WebKit::resistanceForDelta() truncates 'scaleDistance' to integer value using abs()
https://bugs.webkit.org/show_bug.cgi?id=130651
Summary
WebKit::resistanceForDelta() truncates 'scaleDistance' to integer value using...
David Kilzer (:ddkilzer)
Reported
2014-03-23 07:25:04 PDT
Compiling WebKit with trunk clang causes this warning: Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm:112:28: error: using integer absolute value function 'abs' when argument is of floating point type [-Werror,-Wabsolute-value] double scaleDistance = abs(limit - currentScale); ^ Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm:112:28: note: use function 'fabs' instead double scaleDistance = abs(limit - currentScale); ^~~ fabs 1 error generated.
Attachments
Patch v1
(2.16 KB, patch)
2014-03-23 07:26 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2014-03-23 07:26:41 PDT
Created
attachment 227608
[details]
Patch v1
WebKit Commit Bot
Comment 2
2014-03-23 09:13:16 PDT
Comment on
attachment 227608
[details]
Patch v1 Clearing flags on attachment: 227608 Committed
r166140
: <
http://trac.webkit.org/changeset/166140
>
WebKit Commit Bot
Comment 3
2014-03-23 09:13:19 PDT
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 4
2014-03-23 22:30:13 PDT
Yikes! Thanks for fixing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug